intel/bench_214_work/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2001.h_hkscs2001_wctomb_with_main/log.txt
bench_214_work/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2001.h_hkscs2001_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2001.h_hkscs2001_wctomb_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2001.h_hkscs2001_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libhkscs2001.h_hkscs2001_wctomb_with_main.c:77:22: error: cannot initialize a variable of type 'const Summary16 *' (aka 'const TYPE_50__ *') with an rvalue of type 'void *'
    const Summary16 *summary = NULL;
                     ^         ~~~~
2 errors generated.
HLS FPGA Parse FAILED.
